--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "blueimp-md5": "^2.7.0",
     "express": "^4.14.0",
     "jquery-smooth-scroll": "^2.1.2",
-    "materialize-css": "^0.98.1"
+    "materialize-css": "^0.98.1",
+    "qrcode-generator": "^1.3.1"
   }
 }
