--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-cookies": "^1.6.1",
     "angular-materialize": "^0.2.2",
     "angular-route": "^1.6.1",
+    "angular-ui-bootstrap": "^2.5.6",
     "blueimp-md5": "^2.7.0",
     "express": "^4.14.0",
     "jquery-smooth-scroll": "^2.1.2",
