--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-route": "^1.6.1",
     "angular-ui-bootstrap": "^2.5.6",
     "blueimp-md5": "^2.7.0",
+    "bootstrap-select": "^1.12.4",
     "express": "^4.14.0",
     "jquery-smooth-scroll": "^2.1.2",
     "materialize-css": "^0.98.1",
